﻿0.9.2
Additions:
- Added the Networked Targeting Linkup hullmod, which is exclusive to Sylph Core ships
- Added the Sylvetra nanotech cruiser
- More not yet available additions (unless you console them in)
- Added GraphicsLib support

Removals:
- Removed Okarra
- Removed Hymnon
- Removed Hubris

Changes:
- Reworked the Sylph Core installation code so that it now uses skins instead of wierd behind-the-scenes magic
- Upgraded Replekia with fancy vernier thrusters
- Reworked Valestri to fit the Okarra's now vacant role as anvil
- Changed the sounds of the Götterdämmerung (credits to MesoTroniK)

Balancing:
- Increased Equilibrium supply costs to 55/55


0.9.1
Additions:
- Added the Synastry and its built-in weapon, the Apocatastasis [say *that* fast 5 times]
- Added some secret things that aren't yet obtainable

Changes:
- The Frelia no longer has super-heavy mount points; instead, it has two large energy slots (which can still be turned to fighter bays if left empty)
- Moved multiple weapon blueprints into the rare category
- Added new sprites for Sylpheed Station and Ozma Station
- Random behind the scenes adjustments for stuff
- Minor system spawning adjustments
- Added "Stable Locations" to the two Sylphon systems
- Adjusted blueprint rarities for most ships
- Removed Sylphon experimental BP package
- Updated autofit tags for most weapons

Bugfixes:
- Ozma Station is no longer a freeport *twice* (don't ask how that works): only works on new saves, unfortunately, but it's not serious enough to make a new save over anyhow
- Ozma Station now properly has a Low-tech battlestation (also only on new games, but honestly don't bother with it if you're in the middle of a save)


0.9rc2
Bugfixes:
- Fixed Vril-related problems
- Fixed certain built-ins showing up as modular weapons


0.9rc1
Additions:
- Added 0.9 integration