@@ -17,7 +17,7 @@ Ascordia,SRD_Ascordia,Hunterkiller,Sylphon RnD,SRD_nullspace_skip,20,6000,500,12
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #cruisers,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 Rakia,SRD_Rakia,Experimental Cruiser,Sylphon RnD,SRD_armor_polarization,17,6000,900,18000,20000,600,110,,80,60,40,45,50,1300,PHASE,SRD_rakia_phase,50,4,0.3,0.02,0.05,10,100,100,140,2.5,35,8,150000,3,20,360,0.25,35,35,,"sylphon_ex_bp, rare_bp",0.1,0.4,2,3,59421
-Dread Eagle,SRD_Eagle,Cruiser,Sylphon RnD,SRD_creeper_device,17,8000,500,10000,17000,750,150,,70,50,25,25,25,1800,FRONT,,270,0.3,0.8,,,80,120,150,100,3,33,8,55000,3,12,480,0.25,33,33,,sylphon_core_bp,,0.5,2,3,59423
+Dread Eagle,SRD_Eagle,Cruiser,Sylphon RnD,SRD_creeper_device,17,8000,500,10000,17000,600,150,,70,50,25,25,25,1800,FRONT,,270,0.3,0.8,,,80,120,150,100,3,33,8,55000,3,12,480,0.25,33,33,,sylphon_core_bp,,0.5,2,3,59423
 #Hubris,SRD_Hubris,Battlecarrier,Sylphon RnD,targetingfeed,20,6000,500,10000,17000,600,150,2,50,30,20,15,15,1900,OMNI,,180,0.3,0.9,,,150,300,170,110,3,35,8,50000,3,20,540,0.25,24,24,"CARRIER, COMBAT",sylphon_core_bp,,0.5,2,3,59430
 Valestri,SRD_Valestri,Heavy Cruiser,Sylphon RnD,SRD_armor_polarization,30,10000,1200,15000,,700,170,2,50,20,15,10,10,2400,FRONT,,160,0.3,0.9,,,120,180,120,100,3,25,7,75000,3,20,540,0.25,30,30,,sylphon_core_bp,,0.5,2,3,59432
 #Okarra,SRD_Okarra,Heavy Cruiser,Sylphon RnD,SRD_armor_polarization,15,10000,1200,16000,9000,600,180,,55,15,8,12,12,2250,FRONT,,180,0.3,0.9,,,100,150,150,150,5,30,8,70000,4,12,540,0.25,28,28,,sylphon_high_bp,,0.4,2,3,59439
@@ -49,10 +49,10 @@ Vetra,SRD_Vetra,Bomber,Sylphon RnD,,,400,50,500,,100,0,,180,380,350,90,180,30,OM
 Infel,SRD_Infel,Fighter,Sylphon RnD,,,400,80,350,,80,0,,190,350,300,90,180,30,FRONT,,90,0,1,,,1,1,,,,,,,,,,,,,,,,0,,,11554
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Eccentrics,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Deadeye,SRD_Ascordia_deadeye,Sniper,Sylphon RnD,SRD_nullspace_shunt,20,6000,400,14000,17000,600,100,,100,70,50,40,40,1200,FRONT,,120,0.3,0.8,,,0,0,100,60,1,35,9,120000,3,12,480,0.25,35,35,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.5,0.5,2,3,4221
-Celika Ultra-V,SRD_Celika_uv,Racer,Sylphon RnD,microburn,7,1800,250,3200,2500,300,45,,160,240,120,60,120,250,FRONT,,260,0.3,0.7,,,0,0,20,20,1,20,10,30000,8,10,300,0.25,10,10,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.2,0.4,2,2,4455
-Balance Unto All,SRD_Equilibrium_balance,Flagship,Sylphon RnD,SRD_nullspace_skip,40,17000,1200,24000,31250,1200,300,2,40,30,20,10,10,3300,FRONT,,120,0.3,0.6,,,200,400,500,500,10,30,7,400000,4,20,720,0.25,60,60,"UNBOARDABLE, HIDE_IN_CODEX","sylphon_ex_bp, rare_bp",0.8,0.6,2,5,59422
-Cieve,SRD_Synastry_cieve,Advanced Cruiser,Sylphon RnD,SRD_skimmer,25,7000,500,12000,,800,150,,70,80,40,30,30,1600,FRONT,,250,0.3,0.8,,,0,100,150,120,3,40,9,140000,3,20,540,0.25,35,35,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.5,0.5,2,3,55813
+Deadeye,SRD_Ascordia_deadeye,Sniper,Sylphon RnD,SRD_nullspace_shunt,20,6000,400,14000,17000,600,100,,100,70,50,40,40,1200,FRONT,,120,0.3,0.8,,,0,0,100,60,1,35,9,150000,3,12,480,0.25,35,35,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.5,0.5,2,3,4221
+Celika Ultra-V,SRD_Celika_uv,Racer,Sylphon RnD,microburn,7,1800,250,3200,2500,300,45,,160,240,120,60,120,250,FRONT,,260,0.3,0.7,,,0,0,20,20,1,20,10,50000,8,10,300,0.25,10,10,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.2,0.4,2,2,4455
+Balance Unto All,SRD_Equilibrium_balance,Flagship,Sylphon RnD,SRD_nullspace_skip,40,17000,1200,24000,31250,1200,300,2,40,30,20,10,10,3300,FRONT,,120,0.3,0.6,,,200,400,500,500,10,30,7,1000000,4,20,720,0.25,60,60,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.8,0.6,2,5,59422
+Cieve,SRD_Synastry_cieve,Advanced Cruiser,Sylphon RnD,SRD_skimmer,25,7000,500,12000,,800,150,,70,80,40,30,30,1600,FRONT,,250,0.3,0.8,,,0,100,150,120,3,40,9,200000,3,20,540,0.25,35,35,"UNBOARDABLE, HIDE_IN_CODEX",sylphon_ecc_bp,0.5,0.5,2,3,55813
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #Outcast,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 Metafalica,SRD_Metafalica,Ghostship,Sylphon Outcast,SRD_variable_ammo,50,16000,1600,26000,,1200,250,1,60,50,30,15,10,3200,OMNI,,200,0.3,0.8,,,100,400,400,400,10,40,8,900000,4,20,780,0.25,60,60,HIDE_IN_CODEX,"sylphon_outcast_bp, rare_bp",0.05,0.5,2,5,2202
