@@ -1,14 +1,13 @@
 {
   "displayName": "Standard",
-  "fluxCapacitors": 5,
-  "fluxVents": 11,
+  "fluxCapacitors": 0,
+  "fluxVents": 17,
   "goalVariant": true,
   "hullId": "SRD_Sylvetra",
   "hullMods": [
-    "eccm",
     "missleracks",
     "targetingunit",
-    "turretgyros"
+    "heavyarmor"
   ],
   "permaMods": [],
   "quality": 0,
@@ -18,18 +17,18 @@
       "autofire": false,
       "mode": "ALTERNATING",
       "weapons": {
-        "WS0011": "SRD_raphiel_pod",
-        "WS0012": "SRD_raphiel_pod"
+        "WS0007": "SRD_iphrail",
+        "WS0008": "SRD_iphrail",
+        "WS0009": "SRD_iphrail",
+        "WS0010": "SRD_iphrail"
       }
     },
     {
       "autofire": false,
       "mode": "ALTERNATING",
       "weapons": {
-        "WS0007": "SRD_iphrail",
-        "WS0008": "SRD_iphrail",
-        "WS0009": "SRD_iphrail",
-        "WS0010": "SRD_iphrail"
+        "WS0011": "SRD_raphiel_pod",
+        "WS0012": "SRD_raphiel_pod"
       }
     },
     {
