@@ -8,56 +8,59 @@
 		"SRD_Catora_standard":10,
 		"SRD_Catora_prototype":5,
 			
-		"SRD_Celika_P_standard":2,
-		"SRD_Celika_P_balanced":3,
+		"SRD_Celika_P_standard":10,
+		"SRD_Celika_P_balanced":10,
 	},
 	"combatSmall":{
-		"SRD_Furika_standard":5,
+		"SRD_Furika_standard":10,
 		"SRD_Celika_standard":10,
 		"SRD_Celika_heavy":10,
 		"SRD_Catora_standard":10,
 		"SRD_Catora_prototype":5,
 			
-		"SRD_Celika_P_standard":2,
-		"SRD_Celika_P_balanced":3,
-		"SRD_Vril_standard":3,
+		"SRD_Celika_P_standard":10,
+		"SRD_Celika_P_balanced":10,
+		"SRD_Vril_standard":10,
 		
-		"SRD_Celika_uv_racer":2,
+		"SRD_Celika_uv_racer":10,
 	},
 	"combatMedium":{
 		"SRD_Silverhead_standard":10,
 		"SRD_Tarima_standard":5,
 		"SRD_Tarima_assault":5,
 		"SRD_Etrika_standard":10,
-		"SRD_Etrika_support":2,
+		"SRD_Etrika_support":5,
 	},
 	"combatLarge":{
 		"SRD_Eagle_standard":10,
 		"SRD_Eagle_strike":10,
-		"SRD_Eagle_prototype":3,
+		"SRD_Eagle_prototype":5,
 		"SRD_Valestri_standard":10,
-		"SRD_Rakia_standard":2,
+		"SRD_Rakia_standard":5,
 		"SRD_Ascordia_standard":10,
 		"SRD_Ascordia_prototype":5,
-		"SRD_Synastry_standard":6,
+		"SRD_Synastry_standard":10,
 			
-		"SRD_Eagle_P_standard":2,
-		"SRD_Eagle_P_balanced":3,
+		"SRD_Eagle_P_standard":10,
+		"SRD_Eagle_P_balanced":10,
+		"SRD_Sylvetra_standard":10,
 		
-		"SRD_Synastry_cieve_combat":1,
+		"SRD_Synastry_cieve_combat":10,
 		},
 	"combatCapital":{
 		"SRD_Equilibrium_standard":10,
-		"SRD_Equilibrium_missile":7,
+		"SRD_Equilibrium_missile":10,
 		"SRD_Equilibrium_prototype":5,
-		"SRD_Equilibrium_exalted":7,
-		"SRD_Finis_Astra_standard":2,
+		"SRD_Equilibrium_exalted":5,
+		"SRD_Finis_Astra_standard":5,
 		"SRD_Seresvalla_standard":10,
-		"SRD_Seresvalla_elite":5,
-		"SRD_Seresvalla_barrage":5,
-		"SRD_Replekia_andromeda":5,
+		"SRD_Seresvalla_elite":10,
+		"SRD_Seresvalla_barrage":10,
+		"SRD_Replekia_andromeda":10,
 			
-		"SRD_Metafalica_standard":3,
+		"SRD_Metafalica_standard":5,
+		
+		"SRD_Equilibrium_balance_flag":5,
 	},
 	
 	
