@@ -2,7 +2,7 @@
 	"id":"Sylphon_RnD", # internal id
 	"name":"Sylphon RnD", # displayed to the player
 	"author":"Nia and Nicke",
-	"version":"0.9.1",
+	"version":"0.9.2",
 	"description":"Purple warships with weird smoke trails",
 	"gameVersion":"0.9a",
 	"jars":["jars/SylphonRnD.jar"],
